# screen-capture

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  about.html  about_8dox.html  annotated.html  classcs_1_1screen__capture.html  classsc_1_1screen__capture.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d5e83b2594d4dc4b39195a191d3cf24e.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespacecs.html  namespaces.html  namespacesc.html  pages.html  screen-capture_8hpp.html  searchdata-v2.js
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/screen-capture/: screen-capture.hpp
source/: screen-capture-pipewire.cpp  screen-capture-pipewire.hpp  screen-capture.cpp
test/: CMakeLists.txt
test/source/: screen-capture_test.cpp
